use log scale, add total span display bar improve tick labels a bit, to use even spacing and work around bug with fixed # of labels -- only set for <6 data points

--- a/static/tt.css
+++ b/static/tt.css
@@ -89,10 +89,26 @@ html, body
   vertical-align: top;
 }
 
-.scatter-chart {
+.scatter-chart-cont {
   width: 52%;
   height: 110px;
   display: inline-block;
+}
+
+.scatter-chart {
+  width: 100%;
+  height: 80px;
+  display: inline-block;
+}
+
+.scatter-chart-title {
+  width: 100%;
+  height: 16px;
+  display: inline-block;
+  text-align: center;
+  padding-top: 8px;
+  vertical-align: bottom;
+  font-size: 12px;
 }
 
 .mem-nav {
